kubernetes/production/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: production

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:

      containers:

      - name: backend

        image: 622488711452.dkr.ecr.us-east-2.amazonaws.com/capstone-backend:5a096b767e218a1cfcd4237b6ac0ed9ce0cdcf13

        imagePullPolicy: Always

        ports:

        - containerPort: 8080
