kubernetes/production/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: production

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend

        image: 622488711452.dkr.ecr.us-east-2.amazonaws.com/capstone-frontend:3a135c03452f64b222a68589a1d8b8b050e10ed0

        imagePullPolicy: Always

        ports:
        - containerPort: 80
